[Bugfixg] Bug #879. UI: Tour form: Long name is not fitting

--- a/Source/Chronozoom.UI/css/cz.css
+++ b/Source/Chronozoom.UI/css/cz.css
@@ -1722,6 +1722,44 @@ img.fallbackBackground {
   width: 36px;
   height: 36px;
 }
+.cz-tour-form-title {
+  width: 100%;
+  height: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding-right: 80px;
+  margin-right: 80px;
+  margin-left: 15px;
+  overflow: hidden;
+  -ms-text-overflow: ellipsis;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  color: #fff;
+  font-size: 18px;
+  line-height: 36px;
+}
+.cz-tour-form-close-btn {
+  position: absolute;
+  right: 0;
+  top: 0;
+  margin-right: 15px;
+  color: #fff;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 36px;
+}
+.cz-tour-form-min-btn {
+  position: absolute;
+  right: 25px;
+  top: 0;
+  margin-right: 15px;
+  color: #fff;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 36px;
+}
 /* Tour Player Icons. */
 .cz-form-prev-icon {
   background-image: url(../images/tour-prev.png);
